--- a/jupyter_notebook/Jupyter_Final.ipynb
+++ b/jupyter_notebook/Jupyter_Final.ipynb
@@ -724,45 +724,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "6bfad75a-e0dd-48ba-81ff-f42e0ead49c2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def custom_augmentation(np_tensor):\n",
-    " \n",
-    "#  def random_contrast(np_tensor):\n",
-    "#    return tf.image.random_contrast(np_tensor, 0.5, 2)\n",
-    " \n",
-    "#  def random_hue(np_tensor):\n",
-    "#    return tf.image.random_hue(np_tensor, 0.5)\n",
-    " \n",
-    "#  def random_saturation(np_tensor):\n",
-    "#    return tf.image.random_saturation(np_tensor, 0.2, 3)\n",
-    "\n",
-    "  def set_brightness(np_tensor):\n",
-    "    return tf.image.adjust_brightness(np_tensor, 0.01)\n",
-    " \n",
-    "#  augmnted_tensor = random_contrast(np_tensor)\n",
-    "#  augmnted_tensor = random_hue(augmnted_tensor)\n",
-    "#  augmnted_tensor = random_saturation(augmnted_tensor)\n",
-    "  augmnted_tensor = brightness(augmnted_tensor)\n",
-    "  return np.array(augmnted_tensor)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "a880e646-a1c1-44a3-8a9c-ac6fd54aca92",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "  def set_brightness(np_tensor):\n",
-    "    return tf.image.adjust_brightness(np_tensor, 0.99)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 25,
    "id": "07b82485",
    "metadata": {},
@@ -3335,7 +3296,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3349,7 +3310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
